src/assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

* {
  box-sizing: border-box;
}

html {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgba(255, 255, 255, 1);
}

heart {
  display: inline-block;
  font-size: 12px;
  transition: 0.5s;
  cursor: pointer;
  vertical-align: middle;
}

heart:hover {
  font-size: 30px;
  margin-inline: 10px;
}

heart:active {
  font-size: 40px;
  transition: 0.3s;
}

.App {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
}

.App-scale {
  display: flex;
  perspective: 800px;
}

@keyframes CardFrame {
  0% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px;}
  30% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px;}
  50% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 15px;}
  75% {border-radius: 70px 15px 70px 15px;}
  100% {}
}

.Card {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 400px;
  height: 640px;
  user-select: none;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 40px;
  padding-bottom: 40px;
  margin: auto;
  transition: ease 0.1s;
  transform: rotate(0deg);
  animation: CardFrame 2s ease-in-out;
  animation-timing-function: forwards;
  border-radius: 15px 70px 15px 70px;
  background-color: rgba(255, 255, 255, 1);
  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 15px;
}

.App-header {
  margin: auto;
  width: fit-content;
  text-align: center;
}

.App-about {
  margin: auto;
  width: fit-content;
  font-size: 14px;
}

.App-footer {
  padding-top: 2px;
  margin: auto;
  text-align: center;
  width: fit-content;  
  bottom: 0px; 
}

.App-about-extra {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  margin-top: -60px;
  width: 300px;
  height: 280px;
  min-width: 300px;
  min-height: 280px;
  /*border: #000000 dotted 2px;*/
  font-size: 12px;
  transform: rotate(90deg); 
  z-index: -1;
  gap: 10px;
}

@keyframes ProfileFrame {
  0% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px;}
  30% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px;}
  50% {border-radius: 70px 15px 70px 15px;box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 15px;}
  75% {border-radius: 70px 15px 70px 15px;}
  100% {}
}

.pp_logo {
  width: 200px;
  border-radius: 15px 70px 15px 70px;
  border-width: 3px;
  box-shadow: #000000 0px 0px 10px;
  transition: ease 0.2s;
  cursor: pointer;
  animation: ProfileFrame 2s ease-in-out;
}

.pp_logo:hover {
  border-radius: 15px 70px 15px 70px;
  box-shadow: #000000 0px 0px 15px;
  scale: 1.05;
}

.pp_logo:active {
  border-radius: 15px 70px 15px 70px;
  box-shadow: #000000 0px 0px 20px;
  scale: 1.1;
}

.title-about {
  margin: 0px 0px 0px 10px;
  font-size: 28px;
  font-weight: normal;
  text-align: center;
  transition: ease 0.1s;
  font-family: 'Montserrat', sans-serif;
}

.text-about {
  margin: 0px 0px 0px 10px;
  font-weight: normal;
  font-size: 13px;
  text-align: center;
  transition: ease 0.1s;
  font-family: 'Montserrat', sans-serif;
}

#pp {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.threeD-info {
  position: absolute;
  margin: auto;
  font-weight: 700;
  font-size: 12px;
  text-align: center;
  transition: ease 0.2s;
  color: rgba(255, 255, 255, 0.8);
  font-family: 'Montserrat', sans-serif;
  pointer-events: none;
  opacity: 0;
}

.username {
  margin: 10px;
  font-size: 36px;
  font-weight: normal;
  text-align: center;
  padding: 5px;
  transition: ease 0.1s;
  font-family: 'Montserrat', sans-serif;
}

.aka {
  color:rgb(150, 150, 150);
  font-size: 14px;
  font-weight: bold;
  font-family: 'Montserrat', sans-serif;
}

.soundcloud {
  border-radius: 15px;
  border: #797979 dotted 2px;
}

.text-info {
  text-align: center;
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
}

.socials {
  text-align: center;
  padding-top: 6px;
}

.ul-padding {
  padding-top: 5px;
  padding-top: 2px;
  font-family: 'Montserrat', sans-serif;
  font-size: 13px;
}

.padding-inline {
  position: relative;
  display: inline-block;
  padding-inline: 20px;
  top: 0;
  left: 0;
  transition: ease 0.2s;
  transform: rotate(0deg);
  font-size: 30px;
}

.padding-inline:hover {
  top: -5px;
  left: 2px;
  transform: rotate(10deg);
  max-width: 280px;
  scale: 1.4;
}

.li-element {
  padding: 3px;
  list-style: none;
}

.p-footer {
  font-weight: bold;
  font-size: 12px;
  color:rgb(90, 90, 90); 
}

@keyframes NavButtonFrame {
  0% {opacity: 0;pointer-events: none;}
  30% {opacity: 0;pointer-events: none;}
  50% {opacity: 1;pointer-events: all;}
  75% {opacity: 1;}
  100% {opacity: 1;}
}

.navbar {
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  display: flex;
  justify-content: space-between;
  animation: NavButtonFrame 2s ease-in-out;
  margin-top: 80px;
  margin-bottom: 250px;
}

.icon-nav {
  position: absolute;
  left: 12px;
  bottom: 14px;
}

.navbar-half1 {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 0px 70px 70px 0px;
  overflow: hidden;
  gap: 3px;
}

.navbar-half2 {
  display: flex;
  flex-direction: column;
  border-radius: 70px 0px 0px 70px;
  overflow: hidden;
  gap: 3px;
}

.nav-button {
  position: relative;
  display: flex;
  padding: 18px;
  width: 28px;
  height: 160px;
  justify-content: center;
  text-align: center;
  text-decoration: none;
  background-color: #00000008;
  border: none;
  transition: ease 0.2s;
  cursor: pointer;
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  color:rgba(0, 0, 0, 0.2);
  letter-spacing: 4px;
}

.nav-button:hover {
  background-color: #0000000D;
  color:rgb(0, 0,0, 0.6);
}

.rotate-clockwise {
  display: inline-block;
  writing-mode: sideways-rl;
}

.rotate-counterclockwise {
  display: inline-block;
  writing-mode: sideways-lr;
}

@supports not (writing-mode: sideways-rl) {
  .rotate-clockwise {
    display: inline-block;
    writing-mode: vertical-rl;
  }
}

@supports not (writing-mode: sideways-lr) {
  .rotate-counterclockwise {
    display: inline-block;
    writing-mode: vertical-lr;
  }
}

.modal {
  display: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
  user-select: none;
  transition: ease 0.2s;
  font-family: 'Montserrat', sans-serif;
}

.modal-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 15px;
  border-radius: 15px 70px 15px 70px;
  text-align: center;
  overflow: hidden;
}

.modal-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #e4e4e4;
  padding: 50px;
}

.switch {
  position: relative;
  top: -15px;
  left: -15px;
  display: inline-block;
  width: 30px;
  height: 17px;
  transform-origin: 8px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: default;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .2s;
  transition: .2s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 11px;
  width: 11px;
  left: 3px;
  bottom: 3px;
  background-color: white;
  -webkit-transition: .2s;
  transition: .2s;
}

input:checked + .slider {
  background-color: rgb(42, 219, 190);
}

input:checked + .slider:before {
  -webkit-transform: translateX(13px);
  -ms-transform: translateX(13px);
  transform: translateX(13px);
}

.slider.round {
  border-radius: 17px;
}

.slider.round:before {
  border-radius: 50%;
} 

@media screen and (max-width: 678px) {
  .App.about-open {
    position: relative;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    transition: 0.2s ease;
  }

  .App-header.about-open {
    position: absolute;
    opacity: 0;
  }

  .App-about-extra.about-open {
    margin: auto;
  }

  .App-footer.about-open {
    display: none;
  }

  .Card.about-open {
    padding-left: 20px;
    padding-right: 40px;
    padding-top: 20px;
    padding-bottom: 20px;
    width: 450px;
    height: 450px;
    min-width: 450px;
    min-height: 450px;
    display: flex;
    flex-direction: row;
  }

  .navbar.about-open {
    margin-top: 60px;
    margin-bottom: 250px;
  }

  .pp_logo.about-open {
    transition:none;
    position: absolute;
    pointer-events: none;
  }

  .switch.about-open {
    top: 5px;
    left: 5px;
    display: inline-block;
    width: 30px;
    height: 17px;
    transform-origin: 8px;
  }
}

@media screen and (max-height: 700px) {
  .App-scale {
    transform: scale(0.85) translate(0, 0px)  !important;
    transition: scale 0.2 ease;
  }
}

@media screen and (max-height: 610px) {
  .App-scale {
    transform: scale(0.7) translate(0, -0px)  !important;
    transition: scale 0.2 ease;
  }
}

@media screen and (max-width: 480px) {
  .App-scale {
    transform: scale(0.7) translate(0, -0px)  !important;
    transition: scale 0.2 ease;
  }
}

@media screen and (max-height: 280px) {
  .App-scale {
    transform: scale(0.5) translate(0, -0px)  !important;
    transition: scale 0.2 ease;
  }
}

@media screen and (max-width: 280px) {
  .App-scale {
    transform: scale(0.5) translate(0, -0px)  !important;
    transition: scale 0.2 ease;
  }
}

